# ML-0-Project

./: .gitignore  README.md  agenda.md  main.py  pyproject.toml  requirements.txt  setup.py
artifacts/: preprocessor.pkl
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/: exception.py  logger.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py  utils.py
